Quick fix retina logo on mobile devices

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -287,9 +287,9 @@ a {
 		only screen and (                min-resolution: 192dpi),
 		only screen and (                min-resolution: 2dppx) { 
 			position: relative;
-	  	width: 117px;
+	  	width: 150px;
 			height: 40px;
-	    background: url(../img/logo@2x.png) no-repeat left 100%;
+	    background: url(../img/logo.svg) no-repeat left 80%;
 	    background-size: cover;
 		}
 
